[project]
name = "mdpfuzz"
version = "0.0.1"
authors = [
  { name="Mazouni Quentin", email="quentin@simula.no" },
]
description = "Replication of the framework MDPFuzz"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/QuentinMaz/Replicability_Study/"
Issues = "https://github.com/QuentinMaz/Replicability_Study/issues"