[project]
name = "mdpfuzz"
version = "0.0.1"
authors = [
  { name="Anonymous" },
]
description = "Replication of the framework MDPFuzz"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]